# portsage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  FEATURES_TODO.md  LICENSE  PROJECT.it.md  PROJECT.md  README.it.md  README.md  RELEASING.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  server-build.yml
crates/portsage-cli/: Cargo.toml
crates/portsage-cli/src/: cli.rs  lib.rs  main.rs  output.rs
crates/portsage-client/: Cargo.toml
crates/portsage-client/src/: client.rs  lib.rs  types.rs
crates/portsage-mcp/src/: lib.rs
docs/: ARCHITECTURE.it.md  ARCHITECTURE.md  DESIGN.md  multi-host-evolution.md
homebrew/: grimport.rb  portsage.rb
mcp/: SKILL.md  install.sh  pyproject.toml  server.py
scripts/: build-cli.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  backends.rs  commands.rs  db.rs  forwards.rs  lib.rs  main.rs  scanner.rs  socket.rs
src/components/: AddPortForm.tsx  AddProjectForm.tsx  AppHeader.tsx  EditProjectForm.tsx  PopoverPanel.tsx  PortRow.tsx  ProjectCard.tsx  ProjectDetail.tsx  ProjectList.tsx  SettingsPanel.tsx  Sidebar.tsx  UnmanagedPortsPanel.tsx
src/components/ui/: GrimBadge.tsx  GrimButton.tsx  GrimCard.tsx  GrimDivider.tsx  GrimInput.tsx  GrimSearch.tsx  GrimSelect.tsx  GrimStatus.tsx  GrimText.tsx  GrimToast.tsx  UIBadge.tsx  UIButton.tsx  UICard.tsx  UIDialog.tsx  UIDivider.tsx  UIInput.tsx  UISearch.tsx  UISelect.tsx  UIStatus.tsx  UIText.tsx  UIToast.tsx
src/features/backends/: useForwards.ts
src/features/projects/: useProjects.ts
src/lib/: commands.ts  dialog.tsx  errors.test.ts  errors.ts  toast.tsx  types.ts
