[package]
name = "portsage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Port allocation manager for macOS"

[lib]
name = "portsage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "signal"] }
portsage-client = { path = "../crates/portsage-client" }

[dev-dependencies]
tempfile = "3"
