[package]
name = "portsage-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for the Portsage port allocation manager"

[[bin]]
# Dev name to avoid colliding with the Tauri app binary (also `portsage`).
# Bundled / installed binary surfaces as `portsage` via tauri.conf externalBin
# or the Homebrew cask `binary` stanza (Phase 6).
name = "portsage-cli"
path = "src/main.rs"

[dependencies]
portsage-client = { path = "../portsage-client" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anstyle = "1"
anstream = "0.6"

[dev-dependencies]
tempfile = "3"
