[package]
name = "portsage-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Wire protocol types and synchronous Unix-socket client for the Portsage backend"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
